# SO

./: CMakeLists.txt
.metadata/.plugins/org.eclipse.cdt.core/: Exercicio 0.1538227184771.pdom  language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/Exercicio 0/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/Exercicio 0/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Exercicio 0/.indexes/b2/: history.index  properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/Exercicio 0/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
.metadata/.plugins/org.eclipse.core.resources/.root/: 11.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: CircuitRouter-SeqSolver.exe.launch
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2018/9/39/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.desktop-jfm9b8i_32629/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.desktop-jfm9b8i_32629/FP.local.files_0/: node.properties
.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.desktop-jfm9b8i_32629/H.local_16/: node.properties
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Exercicio 0/: .cproject  .project
Exercicio 0/.metadata/: version.ini
Exercicio 0/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Exercicio 0/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Exercicio 0/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
Exercicio 0/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache.lucene60/: _0.cfe  _0.cfs  _0.si  segments_2
Exercicio 0/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history.lucene60/: _0.cfe  _0.cfs  _0.si  segments_1
Exercicio 0/.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
Exercicio 0/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Exercicio 0/circuitrouter_seqsolver_ex01/: CMakeCache.txt  CMakeLists.txt  CircuitRouter-SeqSolver  CircuitRouter-SeqSolver.c  Compile grid  Compile maze  Create circuitResolver exe  maze.c  router.c
Exercicio 0/circuitrouter_seqsolver_ex01 modificado/: CircuitRouter-SeqSolver.c  Makefile  grid.c  grid.h  inputsDescription.sh  router.c  shellScript.sh
Exercicio 0/circuitrouter_seqsolver_ex01 modificado/inputs/: rcosta-x8-y8-z1-n2.txt
Exercicio 0/circuitrouter_seqsolver_ex01 original/: CircuitRouter-SeqSolver  Makefile  grid.c
Exercicio 0/circuitrouter_seqsolver_ex01/inputs/: rcosta-invalid-x3-y3-z1-n1.txt  rcosta-x3-y3-z1-n1.txt
Exercicio 1/so1819-ex1-base/CircuitRouter-SeqSolver/: CircuitRouter-SeqSolver  CircuitRouter-SeqSolver.c  CircuitRouter-SimpleShell  CircuitRouter-SimpleShell.c  Makefile  grid.c  grid.h  maze.c  maze.h
Exercicio 1/so1819-ex1-base/CircuitRouter-SeqSolver/inputs/: random-x32-y32-z3-n96.txt.res
Livro Sistemas Operativos/: exec  exec.c  exec.c~  execve  execve.c  fork  fork.c  myecho  myecho.c  otherThread  otherThread.c  otherThread2.c  simpleFork  simpleFork.c
Shell/: example.sh  firstForCycle.sh  firstShellScript.sh  forCycle.sh  strings.sh  terra
Testes/: Makefile  mainArgsTest.c  mainArgsTest2.c  mainArgsTest3.c  readCommands  readCommands.c  readCommands1  readCommands1.c  segmentationFault  segmentationFault.c  segmentationFault.exe.stackdump  snprintfTest.c  strtok  strtok.c  testStrsep  testStrsep.c
Testes/CircuitRouterTest/: CircuitRouter-SeqSolver.c  Compile circuitResolver  Create circuitResolver exe  maze.c  random-x32-y32-z3-n64.txt
Testes/Ficheiros/: Makefile  coiso.txt  fileCriaEscreve  fileCriaEscreve.c
Testes/PaiFilho/: Makefile  programaFilho  programaFilho.c  programaPai  programaPai.c
